// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FilterContainer renders checkbox filter container 1`] = `
<Gridstyles__Container
  mx="auto"
>
  <Gridstyles__Row
    display="flex"
    flexWrap="wrap"
  >
    <Gridstyles__Column
      py={
        Array [
          20,
          20,
          40,
        ]
      }
      width={1}
    >
      <styles__FilterContainerWrapper>
        <FilterLabel
          filterColour="#FFD95E"
          filterName="foo"
          filterType="checkbox"
          handleSelect={[Function]}
          id="foo"
          isSelected={true}
          key="foo"
        />
        <FilterLabel
          filterColour="#FF5B44"
          filterName="bar"
          filterType="checkbox"
          handleSelect={[Function]}
          id="bar"
          isSelected={false}
          key="bar"
        />
        <FilterLabel
          filterColour="#ED2C6E"
          filterName="baz"
          filterType="checkbox"
          handleSelect={[Function]}
          id="baz"
          isSelected={true}
          key="baz"
        />
      </styles__FilterContainerWrapper>
    </Gridstyles__Column>
  </Gridstyles__Row>
</Gridstyles__Container>
`;

exports[`FilterContainer renders radio filter container 1`] = `
<Gridstyles__Container
  mx="auto"
>
  <Gridstyles__Row
    display="flex"
    flexWrap="wrap"
  >
    <Gridstyles__Column
      py={
        Array [
          20,
          20,
          40,
        ]
      }
      width={1}
    >
      <styles__FilterContainerWrapper>
        <FilterLabel
          filterColour="#FFD95E"
          filterName="foo"
          filterType="radio"
          handleSelect={[Function]}
          id="foo"
          isSelected={false}
          key="foo"
        />
        <FilterLabel
          filterColour="#FF5B44"
          filterName="bar"
          filterType="radio"
          handleSelect={[Function]}
          id="bar"
          isSelected={true}
          key="bar"
        />
        <FilterLabel
          filterColour="#ED2C6E"
          filterName="baz"
          filterType="radio"
          handleSelect={[Function]}
          id="baz"
          isSelected={false}
          key="baz"
        />
      </styles__FilterContainerWrapper>
    </Gridstyles__Column>
  </Gridstyles__Row>
</Gridstyles__Container>
`;
